p4-translation/tests/MethodAsVal.mj.err
 line 4, column 7: error: variable has no type (q)
