p4-translation/tests/MethodAsVal.mj
type T = object { p() };
var v: T;
{
  var q := v.p;
}

